// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Profiles /> renders the <Profiles /> with populated data 1`] = `
<div
  class="profiles__Container-sc-19eq2ru-0 gjRusk"
>
  <h1
    class="profiles__Title-sc-19eq2ru-1 iTsXCw"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-sc-19eq2ru-2 dKqLQr"
  >
    <li
      class="profiles__Item-sc-19eq2ru-5 btjUbt"
    >
      <img
        class="profiles__Picture-sc-19eq2ru-4 bIvJHg"
        data-testid="profile-picture"
        src="/images/users//images/karl.png.png"
      />
      <p
        class="profiles__Name-sc-19eq2ru-3 dTKJVn"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;

exports[`<Profiles /> renders the <Profiles /> with populated data but misc profile image 1`] = `
<div
  class="profiles__Container-sc-19eq2ru-0 gjRusk"
>
  <h1
    class="profiles__Title-sc-19eq2ru-1 iTsXCw"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-sc-19eq2ru-2 dKqLQr"
  >
    <li
      class="profiles__Item-sc-19eq2ru-5 btjUbt"
    >
      <img
        class="profiles__Picture-sc-19eq2ru-4 bIvJHg"
        data-testid="profile-picture-misc"
        src="/images/misc/loading.gif"
      />
      <p
        class="profiles__Name-sc-19eq2ru-3 dTKJVn"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;
